# Syzyf-Engine-cube

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  flake.nix
res/models/: animated_cube.glb  camera_cube.glb  jaketrybake.glb  tv_stand.fbx
res/models/blend/: animated_cube.blend  tvs.blend  tvs.blend1
res/models/schnoz/: schnoz.mtl
res/models/tvs/: tvs.glb  tvs.mtl
res/shaders/: basic.frag  basic.vert  blit.frag  cubemap.frag  fadeout.h  fullscreen.vert  grass.frag  grass.geom  grass.vert  halo.frag  lambert color.frag  lambert.frag  lit.vert  lit_gltf.vert  lit_gltf_animation.vert  lit_tess_ctrl.tess_ctrl  lit_tess_eval.tess_eval  mirror.frag  mirror.vert  pbr refract.frag  pbr.frag  pbr_dissolve.frag  pbr_dissolve.vert  pbr_fadeout.frag  pbr_gltf.frag  pbr_gltf_mask.frag  screendoor.frag  screendoor.vert  skybox.frag  skybox.vert  star.frag  star.vert
src/: Bloom.cpp  BoundingBox.cpp  CMakeLists.txt  Camera.cpp  Debug.cpp  Engine.cpp  Framebuffer.cpp  Frustum.cpp  GameObject.cpp  GameObjectSystem.cpp  GltfImporter.cpp  Graphics.cpp  InputComponent.cpp  InputSystem.cpp  Light.cpp  LightSystem.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  Messaging.cpp  Mirror.cpp  PhysicsComponent.cpp  PhysicsObject.cpp  PostProcessingSystem.cpp  PreComp.cpp  ReflectionProbe.cpp  ReflectionProbeSystem.cpp  Resources.cpp  Scene.cpp  SceneComponent.cpp  SchnozController.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  TimeSystem.cpp  Tonemapper.cpp  Transform.cpp  TweenSystem.cpp  UniformSpec.cpp  VertexSpec.cpp  (+2 more)
src/animation/: AnimationComponent.cpp  AnimationSystem.cpp
src/events/: EventManager.cpp  JumpActionEvent.cpp  PushSchnozEvent.cpp
src/include/: Bloom.h  BoundingBox.h  Camera.h  EasingFunctions.h  Engine.h  Formatters.h  Framebuffer.h  Frustum.h  GameObject.h  GameObjectSystem.h  GltfImporter.h  Graphics.h  InputComponent.h  InputSystem.h  Layer.h  Light.h  LightSystem.h  Material.h  Mesh.h  MeshRenderer.h  Messaging.h  Mirror.h  PhysicsObject.h  PostProcessEffect.h  PostProcessingSystem.h  PreComp.h  ReflectionProbe.h  ReflectionProbeSystem.h  Resources.h  Scene.h  SceneComponent.h  SchnozController.h  Shader.h  Skybox.h  Texture.h  TimeSystem.h  Tonemapper.h  Transform.h  TweenSystem.h  UniformSpec.h  (+2 more)
src/physics/: PhysicsCharacter.cpp  PhysicsComponent.cpp  PhysicsDebugRenderer.cpp  PhysicsJolt.cpp  PhysicsObject.cpp
src/tweening/: Tween.cpp  TweenSystem.cpp
(+42 files in other folders)
